--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v2-62</title>
+    <title>EBS Entry v2-70</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -43,7 +43,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="branding-row"><b>EBS Input</b> <span>v2-62</span></div>
+        <div class="branding-row"><b>EBS Input</b> <span>v2-70</span></div>
         <div class="header-btns">
             <button class="btn-lookup btn-cache-pull" onclick="checkEditState(() => cachePull())">Pull local<br>Lookups</button>
             <button class="btn-lookup" id="refresh_btn" onclick="checkEditState(() => initRefresh())">Refresh<br>Lookups<br>from Sheets</button>
@@ -61,7 +61,7 @@
     <div style="display:grid; grid-template-columns: 1fr 0.4fr 0.3fr; gap:10px; margin-top:10px;">
         <div><label>Category</label><select id="colF" required onchange="handleCatTrigger()"></select></div>
         <div><label style="text-align:center;">Type</label><div id="workTypeDisplay" class="type-display">--</div></div>
-        <div><label>sort</label><input type="number" id="colG" placeholder="0" onfocus="this.value=''"></div>
+        <div><label>Sort</label><input type="number" id="colG" placeholder="0" onfocus="this.value=''"></div>
     </div>
     <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:10px;">
         <div><label>From</label><select id="colH" required onchange="handleAccTrigger()"></select></div>
@@ -71,7 +71,7 @@
     <div style="display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px; margin-top:10px;">
         <div><label>Frequency</label><select id="colFreq"></select></div>
         <div><label>Status</label><select id="colStatus"></select></div>
-        <div><label>Mnth</label><select id="colZ"></select></div>
+        <div><label>Month</label><select id="colZ"></select></div>
     </div>
     <div style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr; gap:8px; margin-top:10px;">
         <div><label>Each</label><input type="number" id="colT" placeholder="0.00" step="0.01" onfocus="this.value=''" oninput="calc()"></div>
@@ -88,7 +88,7 @@
     <div class="preview-wrap" id="previewArea"></div>
     <div id="auth_status">iOS Sync Status: Idle</div>
     <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-62 Type field restored from staging copy. Interlock logic active.</div>
+    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-70 Month and Sort labels formalised. Stable baseline restored.</div>
 </div>
 
 <div id="type_modal" class="modal">
@@ -109,7 +109,7 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v2-62)";
+    const VER = "Excel Budget Sheet Input (v2-70)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, editIndex = -1, pendingEdit = -1, activeNoteIdx = -1, rawLookupData = [], wipeConfirmed = false, resetConfirmed = false, isRestoring = false, pendingOverwrite = false;
 
@@ -142,7 +142,6 @@
     function calc() { const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0; const tot = ((t * u) + v).toFixed(2); const curCode = document.getElementById('colX').value.split(' ')[0] || 'GBP'; document.getElementById('symbol').innerText = symbols[curCode]||"£"; document.getElementById('totalDisp').innerText = tot; return tot; }
     function handleManualFU() { if(document.getElementById('colB').value.startsWith('xf')) document.getElementById('colF').value = "Transfer"; }
     
-    // v2-62 Logic: Rebuilt Restoration Engine targeting "Type" grid label
     function initiateEdit(idx) {
         if (rawLookupData.length === 0) { alert("First Refresh Lookups or Pull local Lookups."); return; }
         if (pendingEdit === idx) {
@@ -151,7 +150,6 @@
             const setUI = (id, val, isDrop = false) => { const el = document.getElementById(id); if(!el) return; if(!isDrop) el.value = val; else { const opts = Array.from(el.options); const found = opts.find(o => o.value === val || o.value === `${val} (AA)` || o.value.startsWith(`${val} `)); if(found) el.value = found.value; } };
             setUI('colA', d[0], true); setUI('colC', d[2]); setUI('colG', d[6]); setUI('colH', d[7], true); setUI('colI', d[8], true); setUI('colK', d[10]); setUI('colT', d[19]); setUI('colM', d[20]); setUI('colV', d[21]); setUI('colX', d[23], true); setUI('colZ', d[25], true);
             setUI('colB', d[1], true); setUI('colF', d[5], true); setUI('colFreq', d[11], true); setUI('colStatus', d[14], true);
-            // v2-62 Restoration Fix: TARGET GRID TYPE
             document.getElementById('workTypeDisplay').innerText = d[4] || "--";
             handleDateChange(); calc(); setTimeout(() => { isRestoring = false; }, 50); logTrace("Record pulled. Type field restored.");
         } else { pendingEdit = idx; editIndex = -1; logTrace("Confirm data retrieval..."); } renderPreview();
@@ -161,7 +159,7 @@
     function closeTypeModal() { document.getElementById('type_modal').style.display = 'none'; }
     function commitTypeSelection() { const selected = document.getElementById('modal_type_select').value; document.getElementById('workTypeDisplay').innerText = selected; closeTypeModal(); saveRow(pendingOverwrite); }
     function saveRow(isOverwrite) { const typeV = document.getElementById('workTypeDisplay').innerText; if (typeV === "--") { pendingOverwrite = isOverwrite; openTypeModal(); return; } const fv = document.getElementById('colF').value, hv = document.getElementById('colH').value, iv = document.getElementById('colI').value; if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")) { alert("Missing data."); return; } let wV = ""; if (fv.startsWith('S')) wV = document.getElementById('colA').value; const r = Array(35).fill(""); r[0]=document.getElementById('colA').value; r[1]=document.getElementById('colB').value; r[2]=document.getElementById('colC').value; r[4]=typeV; r[5]=document.getElementById('colF').value; r[6]=document.getElementById('colG').value; r[7]=document.getElementById('colH').value; r[8]=document.getElementById('colI').value; r[10]=document.getElementById('colK').value; r[11]=document.getElementById('colFreq').value; r[14]=document.getElementById('colStatus').value; r[19]=parseFloat(document.getElementById('colT').value||0).toFixed(2); r[20]=document.getElementById('colM').value; r[21]=parseFloat(document.getElementById('colV').value||0).toFixed(2); r[22]=calc(); r[23]=document.getElementById('colX').value; r[25]=document.getElementById('colZ').value; r[33]=wV; r[34]=VER; let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (isOverwrite && editIndex > -1) { d[editIndex] = r; logTrace("Record Overwritten."); } else { d.push(r); logTrace("New Record Staged."); } localStorage.setItem('ebs_trf', JSON.stringify(d)); localReset(); }
-    function renderPreview() { const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); let h = '<table><tr><th class="w-edit">E</th><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-day">Day</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Category</th><th class="w-sort">sort</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-note">Note</th><th class="w-freq">Frequency</th><th class="w-cur">Cur</th><th class="w-tot">Total</th><th class="w-mnth">Mnth</th><th class="w-stat">Status</th><th class="w-who">Who</th><th class="w-del">Del</th></tr>'; d.forEach((r, idx) => { let bS = "background:#3498db", bL = "E", fN = `initiateEdit(${idx})`; if (pendingEdit === idx) { bS = "background:red"; bL = "..."; } else if (editIndex === idx) { bS = "background:#f39c12"; bL = "C"; fN = `saveRow(true)`; } const [y, m, dn] = r[2].split('-').map(Number); const dt = new Date(y, m-1, dn); const dNam = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][dt.getDay()]; const dStr = `${String(dn).padStart(2,'0')} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]} '${String(dt.getFullYear()).substr(-2)}`; h += `<tr><td class="w-edit"><button onclick="${fN}" style="${bS};color:white;border:none;border-radius:4px;padding:2px 6px;width:22px;">${bL}</button></td><td>${r[0]}</td><td>${r[1]}</td><td class="txt-center">${dNam}</td><td>${dStr}</td><td class="txt-center">${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-note" onclick="openNote(${idx})">${r[10]?'📄':'▫️'}</td><td>${r[11]}</td><td class="txt-center">${r[23].split(' ')[0]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td>${r[14]}</td><td>${r[33]}</td><td class="w-del"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 5px;border-radius:4px;">X</button></td></tr>`; }); document.getElementById('previewArea').innerHTML = h + '</table>'; }
+    function renderPreview() { const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); let h = '<table><tr><th class="w-edit">E</th><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-day">Day</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Category</th><th class="w-sort">Sort</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-note">Note</th><th class="w-freq">Frequency</th><th class="w-cur">Cur</th><th class="w-tot">Total</th><th class="w-mnth">Mnth</th><th class="w-stat">Status</th><th class="w-who">Who</th><th class="w-del">Del</th></tr>'; d.forEach((r, idx) => { let bS = "background:#3498db", bL = "E", fN = `initiateEdit(${idx})`; if (pendingEdit === idx) { bS = "background:red"; bL = "..."; } else if (editIndex === idx) { bS = "background:#f39c12"; bL = "C"; fN = `saveRow(true)`; } const [y, m, dn] = r[2].split('-').map(Number); const dt = new Date(y, m-1, dn); const dNam = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][dt.getDay()]; const dStr = `${String(dn).padStart(2,'0')} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]} '${String(dt.getFullYear()).substr(-2)}`; h += `<tr><td class="w-edit"><button onclick="${fN}" style="${bS};color:white;border:none;border-radius:4px;padding:2px 6px;width:22px;">${bL}</button></td><td>${r[0]}</td><td>${r[1]}</td><td class="txt-center">${dNam}</td><td>${dStr}</td><td class="txt-center">${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-note" onclick="openNote(${idx})">${r[10]?'📄':'▫️'}</td><td>${r[11]}</td><td class="txt-center">${r[23].split(' ')[0]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td>${r[14]}</td><td>${r[33]}</td><td class="w-del"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 5px;border-radius:4px;">X</button></td></tr>`; }); document.getElementById('previewArea').innerHTML = h + '</table>'; }
     function deleteRow(i) { let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); d.splice(i, 1); localStorage.setItem('ebs_trf', JSON.stringify(d)); editIndex = -1; pendingEdit = -1; renderPreview(); }
     async function handleSync() { if (pendingEdit !== -1 || editIndex !== -1) { alert("This function is not available while Edit is in progress for a Staging entry."); return; } const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (!d.length) return; updateStatus("Syncing...", "sync"); tokenClient.callback = async (resp) => { if (!resp.access_token) return; try { const meta = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: "'EBSinput'!A:A" }); const nR = (meta.result.values ? meta.result.values.length : 0) + 1; const vls = d.map(r => { let rc = [...r]; const dP = rc[2].split('-'); rc[2] = `${dP[2]}/${dP[1]}/${dP[0]}`; [1, 5, 11, 14, 23, 25].forEach(i => rc[i] = rc[i].split(' ')[0]); [7, 8].forEach(i => rc[i] = rc[i].replace(/ \(AA\)/g, '')); [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); return rc; }); await gapi.client.sheets.spreadsheets.values.update({ spreadsheetId: SHEET_ID, range: `'EBSinput'!A${nR}:AI${nR + vls.length - 1}`, valueInputOption: 'USER_ENTERED', resource: { values: vls } }); alert("Sync completed."); updateStatus("Token Active", "active"); localStorage.removeItem('ebs_trf'); renderPreview(); logTrace("Sync complete."); } catch (e) { logTrace("Sync Fail."); updateStatus("Error", "error"); } }; tokenClient.requestAccessToken(); }
     window.onload = () => { document.getElementById('colC').value = new Date().toISOString().split('T')[0]; handleDateChange(); gapiLoaded(); gisLoaded(); renderPreview(); };
