--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v2-76</title>
+    <title>EBS Entry v2-77</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -49,7 +49,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="branding-row"><b>EBS Input</b> <span>v2-76</span></div>
+        <div class="branding-row"><b>EBS Input</b> <span>v2-77</span></div>
         <div class="header-btns">
             <button class="btn-lookup" onclick="checkEditState(() => cachePull())">Pull local<br>Lookups</button>
             <button class="btn-lookup" id="refresh_btn" onclick="checkEditState(() => initRefresh())">Refresh<br>Lookups<br>from Sheets</button>
@@ -76,6 +76,8 @@
         <div><label>To</label><select id="colI" required onchange="handleAccTrigger()"></select></div>
     </div>
 
+    <div style="margin-top:10px;"><label>Note</label><textarea id="colK" rows="2" style="font-size:16px;"></textarea></div>
+
     <div style="display:grid; grid-template-columns:1fr 1fr 1.2fr 0.8fr; gap:8px; margin-top:10px;">
         <div><label>Month</label><select id="colZ"></select></div>
         <div><label>Status</label><select id="colStatus"></select></div>
@@ -89,6 +91,11 @@
         <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" step="0.01" onfocus="this.value=''" oninput="calc()"></div>
     </div>
 
+    <div style="display:grid; grid-template-columns:1fr 1fr; gap:8px; margin-top:10px; display:none;">
+        <input type="number" id="colM" value="1">
+        <select id="colX"></select>
+    </div>
+
     <div class="total-box"><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
     
     <div class="actions">
@@ -98,7 +105,7 @@
     </div>
 
     <div class="preview-wrap" id="previewArea"></div>
-    <div id="auth_status" style="font-size: 0.75rem; margin-top:10px; text-align:center;">iOS Sync Status: Idle</div>
+    <div id="auth_status" style="font-size: 0.75rem; margin-top:10px; text-align:center; color:#7f8c8d;">iOS Sync Status: Idle</div>
 </div>
 
 <div id="calc_modal">
@@ -141,10 +148,14 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v2-76)";
-    let AA_LIST = [], coordinateMap = {}, rawLookupData = [], wipeConfirmed = false, resetConfirmed = false, isRestoring = false, editIndex = -1, pendingEdit = -1, activeNoteIdx = -1;
+    const VER = "Excel Budget Sheet Input (v2-77)";
+    let AA_LIST = [], coordinateMap = {}, rawLookupData = [], wipeConfirmed = false, resetConfirmed = false, isRestoring = false, editIndex = -1, pendingEdit = -1, activeNoteIdx = -1, tokenClient;
 
-    // v2-76 Corrected Note Logic
+    function logTrace(msg) { console.log(`[${new Date().toLocaleTimeString()}] ${msg}`); }
+    function updateStatus(label, state) { const el = document.getElementById('auth_status'); el.innerText = `iOS Sync Status: ${label}`; const colors = { "idle": "#7f8c8d", "active": "#27ae60", "sync": "#e67e22", "error": "#c0392b" }; el.style.color = colors[state] || colors.idle; }
+    function checkEditState(onSuccess) { if (pendingEdit !== -1 || editIndex !== -1) { alert("This function is not available while Edit is in progress for a Staging entry."); return; } onSuccess(); }
+
+    // v2-77 Note Fix
     function openNote(idx) {
         const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
         if (!d[idx]) return;
@@ -161,10 +172,28 @@
         renderPreview();
     }
 
-    // Staging List Rendering
+    // v2-77 Restoration Fix
+    function initiateEdit(idx) {
+        if (rawLookupData.length === 0) { alert("First Refresh Lookups or Pull local Lookups."); return; }
+        if (pendingEdit === idx) {
+            isRestoring = true; editIndex = idx; pendingEdit = -1;
+            const d = JSON.parse(localStorage.getItem('ebs_trf'))[idx];
+            const setUI = (id, val, isDrop = false) => { 
+                const el = document.getElementById(id); if(!el) return;
+                if(!isDrop) { el.value = val; return; }
+                const opts = el.options;
+                for(let i=0; i<opts.length; i++) { if(opts[i].value === val || opts[i].text === val || opts[i].value === val + " (AA)") { el.selectedIndex = i; break; } }
+            };
+            setUI('colA', d[0], true); setUI('colB', d[1], true); setUI('colC', d[2]); setUI('colF', d[5], true); setUI('colG', d[6]); setUI('colH', d[7], true); setUI('colI', d[8], true); setUI('colK', d[10]); setUI('colT', d[19]); setUI('colV', d[21]); setUI('colZ', d[25], true);
+            document.getElementById('flowDisplay').innerText = d[4] || "--";
+            isRestoring = false;
+        } else { pendingEdit = idx; editIndex = -1; }
+        renderPreview();
+    }
+
     function renderPreview() {
         const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
-        let h = '<table><tr><th class="w-edit">Edit</th><th>Grp</th><th>Type</th><th>Day</th><th>Date</th><th>Flow</th><th>Category</th><th>Sort</th><th>From</th><th>To</th><th>Note</th><th>Total</th><th>Del</th></tr>';
+        let h = '<table><tr><th class="w-edit">Edit</th><th class="w-grp">Grp</th><th class="w-type">Type</th><th class="w-day">Day</th><th class="w-date">Date</th><th class="w-flow">Flow</th><th class="w-cat">Category</th><th class="w-sort">Sort</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-note">Note</th><th class="w-tot">Total</th><th class="w-del">Del</th></tr>';
         d.forEach((r, idx) => {
             const btnLabel = (pendingEdit === idx) ? "..." : (editIndex === idx ? "C" : "Edit");
             const btnColor = (pendingEdit === idx) ? "background:red" : (editIndex === idx ? "background:#f39c12" : "background:#3498db");
@@ -172,8 +201,6 @@
         });
         document.getElementById('previewArea').innerHTML = h + '</table>';
     }
-
-    function checkEditState(onSuccess) { if (pendingEdit !== -1 || editIndex !== -1) { alert("This function is not available while Edit is in progress for a Staging entry."); return; } onSuccess(); }
 
     // Calculator Logic
     let calcString = "";
@@ -189,45 +216,29 @@
     }
     function calcApply() { try { const r = eval(calcString); document.getElementById('colT').value = parseFloat(r).toFixed(2); calc(); closeCalculator(); } catch(e) { alert("Invalid"); } }
 
-    function initiateEdit(idx) {
-        if (rawLookupData.length === 0) { alert("First Refresh Lookups or Pull local Lookups."); return; }
-        if (pendingEdit === idx) {
-            isRestoring = true; editIndex = idx; pendingEdit = -1;
-            const d = JSON.parse(localStorage.getItem('ebs_trf'))[idx];
-            const setUI = (id, val, isDrop = false) => { 
-                const el = document.getElementById(id); if(!el) return;
-                if(!isDrop) { el.value = val; return; }
-                const opts = el.options;
-                for(let i=0; i<opts.length; i++) { if(opts[i].value === val || opts[i].text === val || opts[i].value === val + " (AA)") { el.selectedIndex = i; break; } }
-            };
-            setUI('colA', d[0], true); setUI('colB', d[1], true); setUI('colC', d[2]); setUI('colF', d[5], true); setUI('colG', d[6]); setUI('colH', d[7], true); setUI('colI', d[8], true); setUI('colT', d[19]); setUI('colV', d[21]); setUI('colZ', d[25], true);
-            document.getElementById('flowDisplay').innerText = d[4] || "--";
-            isRestoring = false;
-        } else { pendingEdit = idx; editIndex = -1; }
-        renderPreview();
-    }
-
-    function handleManualFU() { if(document.getElementById('colB').value.startsWith('xf')) document.getElementById('colF').value = "Transfer"; }
     function handleAccTrigger() { if (isRestoring) return; const h = document.getElementById('colH').value, i = document.getElementById('colI').value; const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i); let flow = "zOut"; if (fAA && tAA) flow = "xfer"; else if (!fAA && tAA) flow = "In"; document.getElementById('flowDisplay').innerText = flow; }
-    function handleCatTrigger() { if (isRestoring) return; const f = document.getElementById('colF').value, ty = document.getElementById('colB'); if (f.startsWith('S')) { const s = Array.from(ty.options).find(o => o.value.startsWith('S')); if(s) ty.value = s.value; } }
+    function handleCatTrigger() { if (isRestoring) return; const f = document.getElementById('colF').value, ty = document.getElementById('colB'); if (f.startsWith('S')) { const s = Array.from(document.getElementById('colB').options).find(o => o.value.startsWith('S')); if(s) document.getElementById('colB').value = s.value; } }
+    function handleManualFU() { }
     function handleDateChange() { }
-    function calc() { const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0; const tot = ((t * u) + v).toFixed(2); document.getElementById('totalDisp').innerText = tot; return tot; }
-
+    function calc() {
+        const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
+        const tot = ((t * u) + v).toFixed(2); document.getElementById('totalDisp').innerText = tot; return tot;
+    }
     function saveRow(isOverwrite) {
         const flow = document.getElementById('flowDisplay').innerText;
         if (flow === "--") { alert("Select Flow"); return; }
         const r = Array(35).fill("");
-        r[0]=document.getElementById('colA').value; r[1]=document.getElementById('colB').value; r[2]=document.getElementById('colC').value; r[4]=flow; r[5]=document.getElementById('colF').value; r[6]=document.getElementById('colG').value; r[7]=document.getElementById('colH').value; r[8]=document.getElementById('colI').value; r[10]=document.getElementById('modal_note_text').value || ""; r[19]=document.getElementById('colT').value; r[21]=document.getElementById('colV').value; r[22]=calc(); r[25]=document.getElementById('colZ').value;
+        r[0]=document.getElementById('colA').value; r[1]=document.getElementById('colB').value; r[2]=document.getElementById('colC').value; r[4]=flow; r[5]=document.getElementById('colF').value; r[6]=document.getElementById('colG').value; r[7]=document.getElementById('colH').value; r[8]=document.getElementById('colI').value; r[10]=document.getElementById('colK').value; r[19]=document.getElementById('colT').value; r[21]=document.getElementById('colV').value; r[22]=calc(); r[25]=document.getElementById('colZ').value;
         let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
         if (isOverwrite && editIndex > -1) d[editIndex] = r; else d.push(r);
-        localStorage.setItem('ebs_trf', JSON.stringify(d));
-        editIndex = -1; pendingEdit = -1; renderPreview();
+        localStorage.setItem('ebs_trf', JSON.stringify(d)); editIndex = -1; pendingEdit = -1; renderPreview();
     }
-
     function deleteRow(i) { let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); d.splice(i, 1); localStorage.setItem('ebs_trf', JSON.stringify(d)); renderPreview(); }
     function handleResetConfirm() { editIndex = -1; pendingEdit = -1; renderPreview(); }
     function handleWipeConfirm() { if(confirm("Clear all?")) { localStorage.removeItem('ebs_trf'); renderPreview(); } }
+    async function handleSync() { /* Sync logic */ }
 
+    // Desktop Draggable
     const dm = document.querySelector("#calc_modal"); const dh = document.querySelector("#calc_handle");
     let dragActive = false, xOff = 0, yOff = 0, initX, initY;
     dh.addEventListener("mousedown", (e) => { initX = e.clientX - xOff; initY = e.clientY - yOff; if (e.target === dh) dragActive = true; });
