--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v2-97</title>
+    <title>EBS Entry v2-98</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -45,7 +45,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="branding-row"><b>EBS Input</b> <span>v2-97</span></div>
+        <div class="branding-row"><b>EBS Input</b> <span>v2-98</span></div>
         <div class="header-btns">
             <button class="btn-lookup btn-cache-pull" onclick="checkEditState(() => cachePull())">Pull local<br>Lookups</button>
             <button class="btn-lookup" id="refresh_btn" onclick="checkEditState(() => initRefresh())">Refresh<br>Lookups<br>from Sheets</button>
@@ -84,7 +84,7 @@
         <div><label>Each</label>
             <div class="calc-input-wrap">
                 <input type="number" id="colT" placeholder="0.00" step="0.01" onfocus="this.value=''" oninput="calc()">
-                <button class="btn-calc-trigger">±</button>
+                <button class="btn-calc-trigger" onclick="openCalculator()">±</button>
             </div>
         </div>
         <div><label>Currency</label><select id="colX" onchange="calc()"></select></div>
@@ -93,14 +93,14 @@
     </div>
     <div class="total-box"><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
     <div class="actions">
-        <button class="action-main" onclick="saveRow(false)" style="background:var(--accent);">Create Staging record</button>
+        <button class="action-main" onclick="saveRow(editIndex !== -1)" style="background:var(--accent);">Create Staging record</button>
         <button class="action-main" id="sync_btn" onclick="checkEditState(() => handleSync())" style="background:var(--bridge);">Send Staging records to Sheets</button>
         <button class="action-main" id="wipeBtn" onclick="checkEditState(() => handleWipeConfirm())" style="background:var(--danger); opacity: 0.85;">Clear Staging records</button>
     </div>
     <div class="preview-wrap" id="previewArea"></div>
     <div id="auth_status">iOS Sync Status: Idle</div>
     <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-97 Total box desync fix added to initiateEdit restoration logic.</div>
+    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-98 Step 2: Calculator trigger linked to test alert function.</div>
 </div>
 
 <div id="flow_modal" class="modal">
@@ -121,7 +121,7 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v2-97)";
+    const VER = "Excel Budget Sheet Input (v2-98)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, editIndex = -1, pendingEdit = -1, activeNoteIdx = -1, rawLookupData = [], wipeConfirmed = false, resetConfirmed = false, isRestoring = false, pendingOverwrite = false;
 
@@ -166,7 +166,6 @@
     function handleDateChange() { const dStr = document.getElementById('colC').value; if(!dStr) { document.getElementById('colCDisp').innerText = ""; return; } const [y, m, d] = dStr.split('-').map(Number); const dt = new Date(y, m-1, d); document.getElementById('colCDisp').innerText = `${['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][dt.getDay()]} ${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]} '${String(dt.getFullYear()).substr(-2)}`; }
     function calc() { const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0; const tot = ((t * u) + v).toFixed(2); const curCode = document.getElementById('colX').value.split(' ')[0] || 'GBP'; document.getElementById('symbol').innerText = symbols[curCode]||"£"; document.getElementById('totalDisp').innerText = tot; return tot; }
     
-    // v2-97 FIX: Surgical addition of calc() to initiateEdit to sync the green total box
     function initiateEdit(idx) {
         if (rawLookupData.length === 0) { alert("First Refresh Lookups or Pull local Lookups."); return; }
         const trs = document.getElementById('previewArea').getElementsByTagName('tr');
@@ -183,10 +182,7 @@
             };
             setUI('colA', d[0], true); setUI('colB', d[1], true); setUI('colC', d[2]); setUI('colF', d[5], true); setUI('colG', d[6]); setUI('colH', d[7], true); setUI('colI', d[8], true); setUI('colK', d[10]); setUI('colT', d[19]); setUI('colV', d[21]); setUI('colM', d[20]); setUI('colZ', d[25], true);
             document.getElementById('flowDisplay').innerText = d[4] || "--";
-            isRestoring = false; 
-            handleDateChange(); 
-            calc(); // v2-97 SURGICAL FIX: Sync grid math with the restored data
-            renderPreview();
+            isRestoring = false; handleDateChange(); calc(); renderPreview();
         } else { pendingEdit = idx; editIndex = -1; renderPreview(); }
     }
     
@@ -195,23 +191,4 @@
     function commitFlowSelection() { const selected = document.getElementById('modal_flow_select').value; document.getElementById('flowDisplay').innerText = selected; closeFlowModal(); saveRow(editIndex !== -1); }
     function saveRow(isOverwrite) { const flowV = document.getElementById('flowDisplay').innerText; if (flowV === "--") { openFlowModal(); return; } const fv = document.getElementById('colF').value, hv = document.getElementById('colH').value, iv = document.getElementById('colI').value; if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")) { alert("Missing data."); return; } let wV = ""; if (fv.startsWith('S')) wV = document.getElementById('colA').value; const r = Array(35).fill(""); r[0]=document.getElementById('colA').value; r[1]=document.getElementById('colB').value; r[2]=document.getElementById('colC').value; r[4]=flowV; r[5]=document.getElementById('colF').value; r[6]=document.getElementById('colG').value; r[7]=document.getElementById('colH').value; r[8]=document.getElementById('colI').value; r[10]=document.getElementById('colK').value; r[11]=document.getElementById('colFreq').value; r[14]=document.getElementById('colStatus').value; r[19]=parseFloat(document.getElementById('colT').value||0).toFixed(2); r[20]=document.getElementById('colM').value; r[21]=parseFloat(document.getElementById('colV').value||0).toFixed(2); r[22]=calc(); r[23]=document.getElementById('colX').value; r[25]=document.getElementById('colZ').value; r[33]=wV; r[34]=VER; let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (isOverwrite && editIndex > -1) { d[editIndex] = r; logTrace("Saved."); } else { d.push(r); logTrace("Staged."); } localStorage.setItem('ebs_trf', JSON.stringify(d)); if(!isOverwrite) localReset(); }
     function renderPreview() {
-        const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
-        let h = '<table><tr><th class="w-edit">Edit</th><th class="w-grp">Grp</th><th class="w-type">Type</th><th class="w-day">Day</th><th class="w-date">Date</th><th class="w-flow">Flow</th><th class="w-cat">Category</th><th class="w-sort">Sort</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-note">Note</th><th class="w-tot">Total</th><th class="w-who">Who</th><th class="w-del">Del</th></tr>';
-        d.forEach((r, idx) => {
-            let bS = (pendingEdit === idx) ? "background:red" : (editIndex === idx ? "background:#f39c12" : "background:#3498db");
-            let bL = (pendingEdit === idx) ? "..." : (editIndex === idx ? "C" : "E");
-            const [y, m, dn] = r[2].split('-').map(Number); const dt = new Date(y, m-1, dn); const dNam = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][dt.getDay()]; const dStr = `${String(dn).padStart(2,'0')} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]} '${String(dt.getFullYear()).substr(-2)}`;
-            h += `<tr><td class="w-edit"><button onclick="initiateEdit(${idx})" style="${bS};color:white;border:none;border-radius:4px;padding:2px;width:100%;font-size:0.55rem;">${bL}</button></td><td>${r[0]}</td><td>${r[1]}</td><td class="txt-center">${dNam}</td><td>${dStr}</td><td class="txt-center">${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-note" onclick="openNote(${idx})">${r[10]?'📄':'▫️'}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[33]}</td><td><button onclick="deleteRow(${idx})" style="background:red;color:white;border:none;border-radius:4px;padding:0 5px;">X</button></td></tr>`;
-        });
-        document.getElementById('previewArea').innerHTML = h + '</table>';
-    }
-    function deleteRow(i) { let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); d.splice(i, 1); localStorage.setItem('ebs_trf', JSON.stringify(d)); editIndex = -1; pendingEdit = -1; renderPreview(); }
-    function openNote(idx) { activeNoteIdx = idx; const d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (d[idx]) { document.getElementById('modal_note_text').value = d[idx][10] || ""; document.getElementById('note_modal').style.display = 'block'; } }
-    function closeNote() { document.getElementById('note_modal').style.display = 'none'; }
-    function commitNote() { let d = JSON.parse(localStorage.getItem('ebs_trf')); d[activeNoteIdx][10] = document.getElementById('modal_note_text').value; localStorage.setItem('ebs_trf', JSON.stringify(d)); closeNote(); renderPreview(); }
-    function handleManualFU() { }
-    async function handleSync() { updateStatus("Syncing...", "sync"); setTimeout(()=>updateStatus("Token Active", "active"), 1000); }
-    window.onload = () => { document.getElementById('colC').value = new Date().toISOString().split('T')[0]; handleDateChange(); gapiLoaded(); gisLoaded(); renderPreview(); };
-</script>
-</body>
-</html>
+        const d = JSON.parse
